change new html file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-        <h1>chenxiangru's father website</h1>
+        <h1>chenxiangru the new website</h1>
 	
     </body>
 </html>
